ADDS -- spif project

--- a/content/publications/2025-RESS-state-dependent/cite.bib
+++ b/content/publications/2025-RESS-state-dependent/cite.bib
@@ -1,8 +1,9 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{nardin2025state-dependent,
+  title   = {UQ state-dependent framework for seismic fragility assessment of industrial components},
+  author  = {Nardin, Chiara and Marelli, Stefano and Bursi, Oreste S. and Sudret, Bruno and Broccardo, Marco},
+  journal = {Reliability Engineering \& System Safety},
+  volume  = {261},
+  year    = {2025},
+  doi     = {doi.org/10.1016/j.ress.2025.111067},
+  url     = {https://www.sciencedirect.com/science/article/pii/S0951832025002686}
 }
